<resources>
    <string name="app_name">gasPriceCalculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="ola_segundo_fragmento">Olá segundo fragmento</string>
    <string name="Car_Consumption">Input car consumption</string>
    <string name="Gas_Price">Input gas price</string>
    <string name="calculate">Calculate</string>
    <string name="distance">Distance in Km</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank"/>
</resources>