<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">
    <EditText
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:text=""
            android:ems="10"
            android:hint="@string/Car_Consumption"
            android:id="@+id/CarConsumption"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            app:layout_constraintBottom_toTopOf="@+id/distance"
            android:layout_marginBottom="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="108dp" android:textColorHint="#757575"/>
    <EditText
            android:layout_width="131dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:text=""
            android:ems="10"
            android:hint="@string/distance"
            android:id="@+id/distance"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            app:layout_constraintBottom_toTopOf="@+id/calculate"
            android:layout_marginBottom="44dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="140dp" android:textColorHint="#757575"/>
    <EditText
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:text=""
            android:hint="@string/Gas_Price"
            android:ems="10"
            android:id="@+id/GasPrice"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            app:layout_constraintBottom_toTopOf="@+id/CarConsumption"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.55"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="136dp"
            android:textColorHint="#757575"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/calculate"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="144dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="340dp"/>
    <TextView
            android:text="@string/blank"
            android:layout_width="237dp"
            android:layout_height="68dp" android:id="@+id/totalPrint"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="84dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="188dp"
            app:fontFamily="sans-serif-black" app:autoSizeTextType="uniform" app:autoSizeMinTextSize="35dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
</androidx.constraintlayout.widget.ConstraintLayout>